test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/POST_api_atlas_v2_groups_111111111111111111111111_databaseUsers_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Fri, 08 Aug 2025 11:04:37 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="rtSifY/q27H00UyyL0+Y39V7ADMi3s5d", algorithm=MD5, qop="auth", stale=false
X-Envoy-Upstream-Service-Time: 4

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}